--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
     "headers": [
       {
-        "source": "/dictionary/(.*).json.gz",
+        "source": "/dictionary/(.*).json",
         "headers": [
-          { "key": "Content-Type", "value": "application/json" },
-          { "key": "Content-Encoding", "value": "gzip" }
+          { "key": "Content-Type", "value": "application/json" }
         ]
       }
     ]
